edit team profile

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
               <p class="text-muted">Education Director &amp; Co-founder</p>
               <div class='row justify-content-center'>
                 <div class='col col-9 col-sm-9 text-justify'>
-                  Richard earned his Master's in Media Arts and Sciences from the Media Lab, Massachusetts Institute of Technology where he specialized in artificial intelligence and computational social science.  Prior to coming back to graduate school, he worked in financial services industry as investment banker and hedge fund analyst for approximately six years.  He has taught four courses in computer science and data science as teaching fellow at Harvard University.
+                  Richard earned his master's in Media Arts and Sciences from the Media Lab, Massachusetts Institute of Technology where he specialized in artificial intelligence and computational social science.  Prior to coming back to graduate school, he worked in financial services industry as investment banker and hedge fund analyst for approximately six years.  He has taught four courses in computer science and data science as teaching fellow at Harvard University.
                 </div>
               </div>
             </div>
@@ -272,7 +272,7 @@
               <p class="text-muted">Executive Director &amp; Co-founder</p>
               <div class='row justify-content-center'>
                 <div class='col col-9 col-sm-9 text-justify'>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.
+                  Anjali earned her master's from the Harvard Graduate School of Education with a focus on Social Entrepreneurship, Design Thinking and Behavioural Sciences. Before coming to the U.S., Anjali was an educator and mentor to 200 at-risk adolescents in India. While at Harvard, she also worked as a Teaching Assistant in the Massachusetts Correctional Institution in Norfolk, MA.
                 </div>
               </div>
             </div>
