--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
               <p class="text-muted">Education Director &amp; Co-founder</p>
               <div class='row justify-content-center'>
                 <div class='col col-9 col-sm-9 text-justify'>
-                  Richard earned his master's in Media Arts and Sciences from the Media Lab, Massachusetts Institute of Technology where he specialized in artificial intelligence and computational social science.  Prior to coming back to graduate school, he worked in financial services industry as investment banker and hedge fund analyst for approximately six years.  He has taught four courses in computer science and data science as teaching fellow at Harvard University.
+                  Richard earned his master's in Media Arts and Sciences from the Media Lab, Massachusetts Institute of Technology where he specialized in artificial intelligence and computational social science.  Prior to coming back to graduate school, he worked in financial services industry for approximately six years.  He has taught four courses in computer science and data science as teaching fellow at Harvard University.
                 </div>
               </div>
             </div>
