--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           </div>
           <div class="col-md-7 col-sm-8 col-sm-8 col-10">
             <h5 class="mt-0 mb-1 service-heading">The U.S. has 5% of the world’s population, but 25% of the world’s prisoners.</h5>
-            <p class="text-muted">There are currently over 2 million Americans behind bars in county jails, state prisons, and federal penitentiaries, and many millions more who are on parole or probation.  From 1973 to 2009, the American prison population grew by 705%, resulting in more than one in 100 adults behind bars.</p>
+            <p class="text-muted text-justify">There are currently over 2 million Americans behind bars in county jails, state prisons, and federal penitentiaries, and many millions more who are on parole or probation.  From 1973 to 2009, the American prison population grew by 705%, resulting in more than one in 100 adults behind bars.</p>
           </div>
         </div>
         <div class="row justify-content-center problem-item">
@@ -94,7 +94,7 @@
           </div>
           <div class="col-md-7 col-sm-8 col-10 order-md-1">
             <h5 class="mt-0 mb-1 service-heading">Up to 60% of formerly incarcerated people cannot find employment one year after their release.</h5>
-            <p class="text-muted">Approximately 650,000 incarcerated individuals are released annually from state and federal correctional facilities.  According to a report in 2008 by National Institute of Justice, up to 60 percent of former inmates remain jobless a year after their release because of their criminal records and low literacy levels. Employment rates and earnings histories of people in prisons and jails are often low before incarceration as a result of limited education experiences and low skill levels.</p>
+            <p class="text-muted text-justify">Approximately 650,000 incarcerated individuals are released annually from state and federal correctional facilities.  According to a report in 2008 by National Institute of Justice, up to 60 percent of former inmates remain jobless a year after their release because of their criminal records and low literacy levels. Employment rates and earnings histories of people in prisons and jails are often low before incarceration as a result of limited education experiences and low skill levels.</p>
           </div>
         </div>
         <div class="row justify-content-center problem-item">
@@ -103,7 +103,7 @@
           </div>
           <div class="col-md-7 col-sm-8 col-10 ">
             <h5 class="mt-0 mb-1 service-heading">Over two-thirds of formerly incarcerated people will be rearrested for a felony or serious misdemeanor within 3 years.</h5>
-            <p class="text-muted">Studies show that there is a powerful relationship between unemployment and recidivism rate among formerly incarcerated individuals.  Locked out of gainful employment opportunities, many formerly incarcerated individuals fall back to substance abuse or engage in criminal activities.  According to a 2008 report by the Urban Institute, "Individuals who made more than $10 an hour were half as likely to return to prison as those making less than $7 an hour."</p>
+            <p class="text-muted text-justify">Studies show that there is a powerful relationship between unemployment and recidivism rate among formerly incarcerated individuals.  Locked out of gainful employment opportunities, many formerly incarcerated individuals fall back to substance abuse or engage in criminal activities.  According to a 2008 report by the Urban Institute, "Individuals who made more than $10 an hour were half as likely to return to prison as those making less than $7 an hour."</p>
           </div>
         </div>
         <div class="row justify-content-center problem-item">
@@ -112,7 +112,7 @@
           </div>
           <div class="col-md-7 col-sm-8 col-10 order-md-1">
             <h5 class="mt-0 mb-1 service-heading">Approximately $52 billion is spent every year on incarceration in the U.S.</h5>
-            <p class="text-muted">In 2011 report by the Pew Center, the growth in prison population in America came at substantial cost, with annual State and Federal expenditures on corrections growing by 305 percent during the past two decades, to total cost of approximately $52 billion.  According to this report, if 10 states with the highest recidivism rates reduced their rates by 10%, they could save more than $470 million a year.</p>
+            <p class="text-muted text-justify">In 2011 report by the Pew Center, the growth in prison population in America came at substantial cost, with annual State and Federal expenditures on corrections growing by 305 percent during the past two decades, to total cost of approximately $52 billion.  According to this report, if 10 states with the highest recidivism rates reduced their rates by 10%, they could save more than $470 million a year.</p>
           </div>
         </div>
       </div>
