--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                     <h4>1. High-Tech Education</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">We offer university-accredited courses in high-tech skills such as Data Science, Web Development, UX/UI Design, Database Management, etc.  Courses are taught by instructors with proven track record of professional and pedogical experience.</p>
+                    <p class="text-muted text-justify">We offer university-accredited courses in high-tech skills such as Data Science, Web Development, UX/UI Design, Database Management, etc.  Courses are taught by instructors with proven track record of professional and pedogical experience.</p>
                   </div>
                 </div>
               </li>
@@ -175,7 +175,7 @@
                     <h4>2. Real-world Projects</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">Collaborating with local technology companies, we design our courses with real-world problems  .  These projects enable our students to build up their professional portfolio of projects to showcase their talent to prospective employers in the tech industry.</p>
+                    <p class="text-muted text-justify">Collaborating with local technology companies, we design our courses with real-world problems  .  These projects enable our students to build up their professional portfolio of projects to showcase their talent to prospective employers in the tech industry.</p>
                   </div>
                 </div>
               </li>
@@ -188,7 +188,7 @@
                     <h4>3. Re-entry Transition</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">We help our students prepare for career and life outside of correctional facilities by coaching them in interview skills, resume writing, business ethics, etc. through one-to-one mentoring and group workshops.
+                    <p class="text-muted text-justify">We help our students prepare for career and life outside of correctional facilities by coaching them in interview skills, resume writing, business ethics, etc. through one-to-one mentoring and group workshops.
                     </p>
                   </div>
                 </div>
@@ -202,7 +202,7 @@
                     <h4>4. Internship</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">Through collaboration with our member companies, we offer full-time, paid internships to our students upon their release.  This enables the students ton continue their education through on-the-job training and relieve them of the pressure to find employment right after being released from correctional facilities.</p>
+                    <p class="text-muted text-justify">Through collaboration with our member companies, we offer full-time, paid internships to our students upon their release.  This enables the students ton continue their education through on-the-job training and relieve them of the pressure to find employment right after being released from correctional facilities.</p>
                   </div>
                 </div>
               </li>
@@ -215,7 +215,7 @@
                     <h4>5. Career &amp; Life Mentorship</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">We continuously engage our students even after their release and follow up on their careers and transition to life outside.  We provide one-to-one counseling as well as group workshops on various topics including personal finance and entrepreneurship.</p>
+                    <p class="text-muted text-justify">We continuously engage our students even after their release and follow up on their careers and transition to life outside.  We provide one-to-one counseling as well as group workshops on various topics including personal finance and entrepreneurship.</p>
                   </div>
                 </div>
               </li>
@@ -228,7 +228,7 @@
                     <h4>6. Alumni Community</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">We strive to build a community of alumni who completed our program and are working professionals in the technology industry.  We hold monthly coding nights where the alumni can come together and code together in a collaborative setting.  We encourage collaboration and entrepreneurship through the alumni network.</p>
+                    <p class="text-muted text-justify">We strive to build a community of alumni who completed our program and are working professionals in the technology industry.  We hold monthly coding nights where the alumni can come together and code together in a collaborative setting.  We encourage collaboration and entrepreneurship through the alumni network.</p>
                   </div>
                 </div>
               </li>
