--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
           <div class="col-md-7 col-sm-8 col-10">
             <h5 class="mt-0 mb-1 service-heading"></h5>
             <p class="text-muted text-justify">Today, employment opportunities are growing  for those who possess high-tech skills such as software engineering and data science as the use of information technology expands in many industries.  All the while, blue-collar jobs are disappearing due to overseas outsourcing and automation.  This trend is particularly problematic for incarcerated individuals who will face formidable employment challenges due to their conviction records and the lack of skills applicable in jobs that are less susceptible to automation and outsourcing.  </p>
-            <p class="text-muted text-justify">Inspired by successes of The Last Mile in California and Code4000 in the UK that educated  incarcerated individuals to become productive web developers, Coders Beyond Bars will launch a pilot program to offer Introduction to Data Science course in a correctional facility in Boston, Massachusetts with the aim of teaching  practical skills such as computer programming, data visualization, and database management to prepare the students for entry-level data science positions.   American economy faces a shortage of 180,000 employees with data analytical skills, and this shortage is particularly acute in Boston due to concentration of high-tech industries.</p>
-            <p class="text-muted text-justify">Our aim is to address this shortage in the supply of talent in data analytics skills by educating incarcerated individuals in those skills and connecting them with companies that seek their prospective employees from an alternative pool of talents.</p>
+            <p class="text-muted text-justify">Inspired by successes of The Last Mile in California and Code4000 in the UK that educated  incarcerated individuals to become productive web developers, Coders Beyond Bars will launch a pilot program to offer Introduction to Data Science course in a correctional facility in Boston, Massachusetts with the aim of teaching  practical skills such as computer programming, data visualization, and database management to prepare the students for entry-level data science positions.</p>
+            <p class="text-muted text-justify">American economy faces a shortage of 180,000 employees with data analytical skills, and this shortage is particularly acute in Boston due to concentration of high-tech industries.  Our aim is to address this shortage in the supply of talent in data analytics skills by educating incarcerated individuals in those skills and connecting them with companies that seek their prospective employees from an alternative pool of talents.</p>
           </div>
         </div>
       </div>
@@ -162,7 +162,7 @@
                     <h4>1. High-Tech Education</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted text-justify">We offer university-accredited courses in high-tech skills such as Data Science, Web Development, UX/UI Design, Database Management, etc.  Courses are taught by instructors with proven track record of professional and pedogical experience.</p>
+                    <p class="text-muted text-justify">We offer university-accredited courses in high-tech skills such as Data Science, Web Development, UX/UI Design, and Database Management.  Courses are taught by instructors with proven track record of professional and pedogical experience.</p>
                   </div>
                 </div>
               </li>
@@ -175,7 +175,7 @@
                     <h4>2. Real-world Projects</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted text-justify">Collaborating with local technology companies, we design our courses with real-world problems  .  These projects enable our students to build up their professional portfolio of projects to showcase their talent to prospective employers in the tech industry.</p>
+                    <p class="text-muted text-justify">Collaborating with local technology companies, we design our courses with real-world problems.  These projects enable our students to build up their professional portfolio of projects to showcase their talent to prospective employers in the tech industry.</p>
                   </div>
                 </div>
               </li>
@@ -188,7 +188,7 @@
                     <h4>3. Re-entry Transition</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted text-justify">We help our students prepare for career and life outside of correctional facilities by coaching them in interview skills, resume writing, business ethics, etc. through one-to-one mentoring and group workshops.
+                    <p class="text-muted text-justify">We help our students prepare for career and life outside of correctional facilities by coaching them soft skills such as interview skills, resume writing, business ethics, etc. through one-to-one mentoring and group workshops.
                     </p>
                   </div>
                 </div>
@@ -202,7 +202,7 @@
                     <h4>4. Internship</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted text-justify">Through collaboration with our member companies, we offer full-time, paid internships to our students upon their release.  This enables the students ton continue their education through on-the-job training and relieve them of the pressure to find employment right after being released from correctional facilities.</p>
+                    <p class="text-muted text-justify">Through collaboration with our member companies, we offer full-time, paid internships to our students upon their release.  This enables the students to continue their education through on-the-job training and relieve them of the pressure to find employment after being released from correctional facilities.</p>
                   </div>
                 </div>
               </li>
@@ -260,7 +260,7 @@
               <p class="text-muted">Education Director &amp; Co-founder</p>
               <div class='row justify-content-center'>
                 <div class='col col-9 col-sm-9 text-justify'>
-                  Richard earned his master's in Media Arts and Sciences from the Media Lab, Massachusetts Institute of Technology where he specialized in artificial intelligence and computational social science.  Prior to coming back to graduate school, he worked in financial services industry for approximately six years.  He has taught four courses in computer science and data science as teaching fellow at Harvard University.
+                  Richard earned his master's in Media Arts and Sciences from the Media Lab, Massachusetts Institute of Technology where he specialized in artificial intelligence and computational social science.  Prior to coming back to graduate school, he worked in financial services industry for approximately six years.  He has taught four courses in computer science and data science as Teaching Fellow at Harvard University.
                 </div>
               </div>
             </div>
