Fixed spelling errors

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                     <h4>1. High-Tech Education</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted text-justify">We offer university-accredited courses in high-tech skills such as Data Science, Web Development, UX/UI Design, and Database Management.  Courses are taught by instructors with proven track record of professional and pedogical experience.</p>
+                    <p class="text-muted text-justify">We offer university-accredited courses in high-tech skills such as Data Science, Web Development, UX/UI Design, and Database Management.  Courses are taught by instructors with proven track record of professional and pedagogical experience.</p>
                   </div>
                 </div>
               </li>
