Update Social Media Buttons

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                     <h4>1. High-Tech Education</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted text-justify">We offer university-accredited courses in high-tech skills such as Data Science, Web Development, UX/UI Design, and Database Management.  Courses are taught by instructors with proven track record of professional and pedagogical experience.</p>
+                    <p class="text-muted text-justify">We offer university-accredited courses in high-tech skills such as Data Science, Web Development, UX/UI Design, and Database Management.  Courses are taught by instructors with proven track record of professional and pedagogical  experience.</p>
                   </div>
                 </div>
               </li>
@@ -369,26 +369,26 @@
     <footer>
       <div class="container">
         <div class="row">
-          <div class="col-md-4">
+          <div class="col-md-6">
             <span class="copyright">Copyright &copy; Coders Beyond Bars 2018</span>
           </div>
-          <div class="col-md-4">
-            <ul class="list-inline social-buttons">
-              <li class="list-inline-item">
+          <div class="col-md-6">
+            <ul class="list-inline social-buttons pull-right">
+              <!-- <li class="list-inline-item">
                 <a href="#">
                   <i class="fa fa-twitter"></i>
                 </a>
-              </li>
+              </li> -->
               <li class="list-inline-item">
-                <a href="#">
+                <a href="https://www.facebook.com/codersbeyondbars/">
                   <i class="fa fa-facebook"></i>
                 </a>
               </li>
-              <li class="list-inline-item">
+              <!-- <li class="list-inline-item">
                 <a href="#">
                   <i class="fa fa-linkedin"></i>
                 </a>
-              </li>
+              </li> -->
             </ul>
           </div>
         </div>
